# mcp-server-data-wrangler

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/mcp_server_data_wrangler/: __init__.py  configurations.py  make_logger.py  server.py
src/mcp_server_data_wrangler/tools/: __init__.py  data_count.py  data_estimated_size.py  data_max.py  data_mean.py  data_median.py  data_min.py  data_product.py  data_quantile.py  data_schema.py  data_shape.py  data_std.py  data_var.py  describe_data.py  model.py  tools.py
src/mcp_server_data_wrangler/utils/: __init__.py  datetime_utils.py  str_utils.py
tests/: conftest.py
tests/tools/: test_data_count.py  test_data_estimated_size.py  test_data_max.py  test_data_mean.py  test_data_min.py  test_data_schema.py  test_data_shape.py  test_describe_data.py
